--- a/backend/src/main/resources/static/index.html
+++ b/backend/src/main/resources/static/index.html
@@ -54,5 +54,5 @@
     </div>
   </app-root>
 
-<link rel="modulepreload" href="chunk-KEL7665R.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="main-DP76YLJQ.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-KEL7665R.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="main-5UU76OJG.js" type="module"></script></body>
 </html>
