--- a/backend/src/main/resources/static/index.html
+++ b/backend/src/main/resources/static/index.html
@@ -54,5 +54,5 @@
     </div>
   </app-root>
 
-<link rel="modulepreload" href="chunk-A7HX4YFO.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="main-7LMWZXMQ.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-A7HX4YFO.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="main-T5B2ITRB.js" type="module"></script></body>
 </html>
